# telephant-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/telephant_server/: __init__.py  asn.py  auth.py  db.py
src/webcrud/: __init__.py
templates/: base.html.j2  privacy.html  report.html.j2  tos.html  webcrudtable.html.j2
test/: server-config.yaml
